--- a/static/css/default.css
+++ b/static/css/default.css
@@ -4,8 +4,8 @@ body {
 
 * {
 	color: LightGray;
-	font-size: 14px;
-	font-weight: bold;
+	font-size: 16px;
+	font-weight: normal;
 	font-family: "Helvetica", Helvetica, sans-serif;
 	text-align: left;
 	text-indent: 0px;
@@ -21,7 +21,7 @@ h1 {
     }
 
 h2 {
-	color: LightYellow;
+	color: Orange;
 	font-size: 20px;
     text-align: left;
     font-weight: bold;
@@ -64,6 +64,13 @@ td {
 
 .control {
     font-weight: normal;
+    text-align: left;
+    }
+
+.heading {
+    color: LightYellow;
+    font-size: 16px;
+    font-weight: bold;
     text-align: left;
     }
 
