--- a/templates/accept.html
+++ b/templates/accept.html
@@ -1,5 +1,10 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <Response>
+    {% if trusted %}
+    <Gather numDigits='1' timeout='5' action='getNumber' method='GET'>
+        <Say voice='alice' language='en-GB'>Press the star key to make a call using this number.</Say>
+    </Gather>
+    {% endif %}
     <Dial timeout='{{ timeout }}' action='record' method='GET'>
         {% for number in numbers %}
         <Number>{{ number }}</Number>
