--- a/static/css/default.css
+++ b/static/css/default.css
@@ -58,6 +58,7 @@ td {
     }
 
 .label {
+	font-family: "Courier New", Courier, monospace;
     text-align: left;
     margin-right: 8px;
     }
@@ -71,12 +72,14 @@ td {
     color: LightYellow;
     font-size: 16px;
     font-weight: bold;
+	font-family: "Courier New", Courier, monospace;
     text-align: left;
     }
 
 .data {
     font-size: 12px;
     font-weight: normal;
+	font-family: "Courier New", Courier, monospace;
     text-align: left;
     }
 
